fix code option in editor so text doesn't get cut off

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -48,6 +48,10 @@ body {
     }
 }
 
+pre { /* fixes code option in editor */
+    white-space: normal;
+}
+
 /* ===============================
    NAV
    =============================== */
